<resources>
    <string name="app_name">iMess</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="search_dots">Search&#8230;</string>
    <string name="search_email_dots">Search email&#8230;</string>
    <string name="recent">Recent</string>
    <string name="groups">Groups</string>
    <string name="friends">Friends</string>
    <string name="group_name">Group name</string>
    <string name="create_new_group">Create new group</string>
    <string name="storage_url">gs://imess-eaa69.appspot.com</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="please_enter_group_name">Please enter group name</string>
    <string name="created_group_successfully">Created group successfully</string>
    <string name="creating_group">Creating group</string>
    <string name="uploading_image">Uploading image&#8230;</string>
    <string name="created_group_successfully_but_failed_to_upload_image">Created group successfully but failed to upload group image. You can change group image later.</string>
    <string name="write_a_message">Write a message&#8230;</string>
    <string name="failed_to_get_members">Failed to get members</string>
    <string name="update_group">Update group</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign up</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="or">OR</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_chat">Chat</string>
    <string name="title_activity_updating_group">UpdatingGroupActivity</string>
    <string name="password">Password</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="confirm_password">Confirm password</string>
    <string name="your_email">Your email</string>
    <string name="enter_a_valid_email">Please enter a valid email address</string>
    <string name="password_must_6_char">Password must be at least 6 characters</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="sign_up_failed">Sign up failed. Please try again later.</string>
    <string name="authenticating">Authenticating&#8230;</string>
    <string name="sign_up_succeed">Sign up succeed. Signing in&#8230;</string>
    <string name="authentication_failed">Authentication failed. Please try again later.</string>
    <string name="your_name">Your name</string>
    <string name="upload_profile_image_failed">Upload profile image failed</string>
    <string name="enter_your_name">Enter your display name here</string>
    <string name="uploading_profile_image">Uploading your profile image&#8230;</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="declined_request">Declined request</string>
    <string name="you">You</string>
    <string name="updating_group">Updating group</string>
    <string name="update_group_succeed">Update group succeed</string>


</resources>
